[OS/2] Bug 342644: Get SVG/Canvas working again on OS/2, r=tor, sr=mkaply